# ai_coding_team

./: .gitignore  README.md  pyproject.toml
src/ai_coding_team/: __init__.py  crew.py  main.py
src/ai_coding_team/config/: agents.yaml  tasks.yaml  team_rules.yaml
src/ai_coding_team/tools/: custom_tool.py  generation.py
