[project]
name = "ai_coding_team"
version = "0.1.0"
description = "ai_coding_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "gradio>=5.22.0",
    "litellm>=1.40.10",
]

[project.scripts]
ai_coding_team = "ai_coding_team.main:run"
run_crew = "ai_coding_team.main:run"
train = "ai_coding_team.main:train"
replay = "ai_coding_team.main:replay"
test = "ai_coding_team.main:test"
run_with_trigger = "ai_coding_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
